--- a/javascript.html
+++ b/javascript.html
@@ -7,7 +7,7 @@
 <body>
   <h1><a href="web.html">WEB</a></h1>
   <ol>
-    <a href="html.html"><li>HTML</li></a>
+    <a href="index.html"><li>HTML</li></a>
     <a href="CSS.html"><li>CSS</li></a>
     <a href="javascript.html"><li>JavaScript</li></a>
   </ol>
