--- a/javascript.html
+++ b/javascript.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="web.html">WEB</a></h1>
+  <h1><a href="index.html">WEB</a></h1>
   <ol>
     <a href="index.html"><li>HTML</li></a>
     <a href="CSS.html"><li>CSS</li></a>
